--- a/src/input.css
+++ b/src/input.css
@@ -3,14 +3,14 @@
 @tailwind utilities;
 
 body {
-  background-image: url("../images/bg-tablet-pattern.svg");
+  background-image: url("./images/bg-tablet-pattern.svg");
   background-repeat: no-repeat;
   background-size: 800px;
   background-position: 90% -25%;
 }
 
 #CTA {
-  background-image: url("../images/bg-simplify-section-desktop.svg");
+  background-image: url("./images/bg-simplify-section-desktop.svg");
   background-repeat: no-repeat;
 }
 @media (max-width: 575px) {
@@ -19,7 +19,7 @@ body {
     background-size: 500px;
   }
   #CTA {
-    background-image: url("../images/bg-simplify-section-mobile.svg");
+    background-image: url("./images/bg-simplify-section-mobile.svg");
   }
 }
 
